--- a/Exam2020.DAL/Exam2020.DAL.csproj
+++ b/Exam2020.DAL/Exam2020.DAL.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Exam2020.Models\Exam2020.Models.csproj" />
+  </ItemGroup>
+
 </Project>
