--- a/Exam2020.Web/appsettings.json
+++ b/Exam2020.Web/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=Exam2020;Username=postgres;Port=5432;Password=postgres;"
+    "DefaultConnection": "Host=localhost;Database=Exam2020;Username=postgres;Port=5432;Password=admin;"
   },
   "AllowedHosts": "*"
 }
